# ocudu-gpu-channel

./: .dockerignore  .gitignore  AGENT_HARNESS.md  AGENT_PROGRESS.md  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: pages.yml
apps/: app_support.h  ocudu_gpu_channel.cpp  ocudu_gpu_channel_bench.cpp  ocudu_zmq_sink.cpp  ocudu_zmq_source.cpp
docs/: gpu-kernel-design.html  index.html  ocudu-gpu-channel-doc.html  ocudu-interop.md  project-structure.md
docs/blueprint-generated/: Project_Architecture_Blueprint.md  README.md  perf-backend-compare-2026-05-25.json  sweep-2026-05-25-post-d2b.json  sweep-2026-05-25-post-d3.json  sweep-2026-05-25.json
docs/blueprint-generated/perf-fanin-post-d4/: m-to-n_M16_N16.csv  m-to-n_M16_N16.gpu.csv  m-to-n_M16_N2.csv  m-to-n_M16_N2.gpu.csv  m-to-n_M16_N4.csv  m-to-n_M16_N4.gpu.csv  m-to-n_M2_N16.csv  m-to-n_M2_N16.gpu.csv  m-to-n_M2_N2.csv  m-to-n_M2_N2.gpu.csv  m-to-n_M2_N4.csv  m-to-n_M2_N4.gpu.csv  m-to-n_M2_N8.csv  m-to-n_M2_N8.gpu.csv  m-to-n_M4_N16.csv  m-to-n_M4_N16.gpu.csv  m-to-n_M4_N2.csv  m-to-n_M4_N2.gpu.csv  m-to-n_M4_N4.csv  m-to-n_M4_N4.gpu.csv  m-to-n_M4_N8.csv  m-to-n_M4_N8.gpu.csv  m-to-n_M8_N2.csv  m-to-n_M8_N2.gpu.csv  m-to-n_M8_N4.csv  m-to-n_M8_N4.gpu.csv  m-to-n_M8_N8.csv  m-to-n_M8_N8.gpu.csv  one-to-n_N1.csv  one-to-n_N1.gpu.csv  one-to-n_N16.csv  one-to-n_N16.gpu.csv  one-to-n_N2.csv  one-to-n_N2.gpu.csv  one-to-n_N32.csv  one-to-n_N32.gpu.csv  one-to-n_N4.csv  one-to-n_N4.gpu.csv  one-to-n_N64.csv  one-to-n_N64.gpu.csv  (+6 more)
docs/plans/: device-channel-pipeline.md  runtime-mutable-channel-v2.md  runtime-mutable-channel-v3.md  runtime-mutable-channel.md
docs/superpowers/specs/: 2026-05-26-docker-runtime-design.md
examples/: topology.graph.cuda.yaml  topology.local.cpu.yaml  topology.multi-gnb.cuda.yaml  topology.mvp.cuda.yaml  topology.ocudu-docker.cuda.yaml  topology.ocudu-docker.multi-ue.cuda.yaml  topology.ocudu-docker.tx-offset.cuda.yaml  topology.perf-tdl-a-fanin-8.cuda.yaml  topology.stress-16-edge.cuda.yaml  topology.tdl-a.cuda.yaml  topology.tdl-b.cuda.yaml  topology.tdl-c.cuda.yaml  topology.tdl-d.cuda.yaml  topology.tdl-e.cuda.yaml
examples/ocudu/: gnb_zmq_b210_fdd_srsue.yml
include/ocudu_gpu_channel/: backend.h  broker.h  config.h  control_server.h  cpu_backend.h  cuda_backend.h  delay.h  device_channel.h  processing.h  runtime_control.h
scripts/: gen_topology.py
scripts/figures/: regen_fading_figures.py
scripts/remote/: README.md  build-and-bench-cuda-mvp.sh  gpu-test-sequence.sh  ocudu-attach-smoke.sh  ocudu-interop-smoke.sh  ocudu-multi-gnb-smoke.sh  ocudu-multi-ue-smoke.sh  perf-backend-compare.sh  perf-deep-profile.sh  perf-fanin-sweep.sh  perf-sweep.sh
src/: backend.cpp  broker.cpp  config.cpp  control_server.cpp  cpu_backend.cpp  cuda_backend.cu  device_channel.cu  processing.cpp
tests/: test_broker.cpp  test_config.cpp  test_control_server.cpp  test_hardware_probe.cpp  test_mutable_params.cpp  test_processing.cpp  test_ring.cpp  test_runtime_update_parity.cpp
